--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/logintext2"
+            android:id="@+id/loginitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -86,29 +86,32 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginLeft="0dp"
             android:layout_weight="1"
-            android:layout_marginLeft="55dp"
             android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/kakaoButton"
                 android:layout_width="0dp"
+                android:background="#fff"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/kakao" />
+                app:srcCompat="@drawable/kakao"/>
 
             <ImageButton
                 android:id="@+id/naverButton"
                 android:layout_width="0dp"
+                android:background="#fff"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/naver" />
+                app:srcCompat="@drawable/naver"/>
 
             <ImageButton
                 android:id="@+id/googleButton"
                 android:layout_width="0dp"
+                android:background="#fff"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/google" />
